Fixed the profile picture and linked to the top of the page

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -1,3 +1,4 @@
+<td id="toc" style="position:relative; width:100%;max-width:100%;padding-left:20px;float left">
 /*!
  * Materialize v0.95.1 (http://materializecss.com)
  * Copyright 2014-2015 Materialize
@@ -7772,4 +7773,13 @@ ul.side-nav .collapsible-body li.active, ul.side-nav.fixed .collapsible-body li.
 @media (min-height: 40.125em) {
   .picker--time .picker__box {
     margin-bottom: 5em; }
+ }
+
+ .propic {
+
+ vertical-align: middle;
+
+
+
+
  }
